--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url(/imagens/fundo.gif);
+    background-image: url(../imagens/fundo.gif);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
